tests/expectations/parser/functions/ident_token_fail.out
Error [EPAR0370005]: expected '}', '@', 'record', 'struct', 'async', 'const', 'function', 'inline', 'mapping', 'script', 'transition' -- found '1'
    --> test:3:5
     |
   3 |     1 main() {}}
     |     ^
